@@ -27,6 +27,7 @@
  397348 new feature: preferences option to clear the article cache on exit
  389887 the nntp 411 error message could be more helpful
  350372 list missing parts of an incomplete multipart
+ 350442 configurable newsrc location
 
 
 0.120 "Plate of Shrimp"
